package ch.uzh.group8.checkersv2.dom;

public interface BoardObserver {
  void boardChanged(Board board);
}
